# cuneiform-by

./: .gitignore  CMakeLists.txt  README_datafiles.txt  readme.txt
cuneiform_src/: CMakeLists.txt  tags
cuneiform_src/Kern/ccom/: CMakeLists.txt
cuneiform_src/Kern/ced/: CMakeLists.txt
cuneiform_src/Kern/cfcompat/: CMakeLists.txt  cfcompat.c
cuneiform_src/Kern/cfio/: CMakeLists.txt
cuneiform_src/Kern/cimage/: CMakeLists.txt
cuneiform_src/Kern/cline/: CMakeLists.txt
cuneiform_src/Kern/cpage/: CMakeLists.txt
cuneiform_src/Kern/cpu/: CMakeLists.txt
cuneiform_src/Kern/cstr/: CMakeLists.txt
cuneiform_src/Kern/ctb/: CMakeLists.txt
cuneiform_src/Kern/dif/: CMakeLists.txt
cuneiform_src/Kern/evn32/: CMakeLists.txt
cuneiform_src/Kern/exc/: CMakeLists.txt
cuneiform_src/Kern/fon/: CMakeLists.txt
cuneiform_src/Kern/h/: cttypes.h
cuneiform_src/Kern/hdebug/: __snp.c  dpuma.h  snptools.h
cuneiform_src/Kern/hh/: internal.h  xstack.h
cuneiform_src/Kern/hhh/: __puma.c  (+3 more)
cuneiform_src/Kern/puma/: CMakeLists.txt
cuneiform_src/Kern/puma/c/: enum.cpp  partrecog.cpp
cuneiform_src/Kern/puma/main/: dll.cpp  puma.cpp
cuneiform_src/cli/: CMakeLists.txt  cuneiform-cli.cpp
debian/: changelog  clean  control  copyright  cuneiform-common.install  cuneiform.install  cuneiform.substvars  files  get-orig-source.sh  rules  watch
debian/patches/: c-assert.diff  graphicsmagick.diff  series  slovenian-slv.diff  swapbytes.diff
debian/source/: include-binaries
debian/vrms/: cuneiform
headers/: CMakeLists.txt  cuneiform.h
images/: CMakeLists.txt  test_output.sh
(+197 files in other folders)
